<resources>
    <string name="app_name">QueueTracker</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="ticket_number">UA#A2UZ</string>
    <string name="search">Search</string>
    <string name="default_value">0.0</string>
    <string name="km">km</string>
    <string name="map_view">map \nview</string>
    <string name="post_bank">Post \nbank</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="time_text">00</string>
    <string name="time_shift">00</string>

    <string name="google_map_api_key">AIzaSyCCUa96-CZOyeagZY2aM9CYeOQjEh7c1VI</string>

    <!--// conformation_screen string file-->
    <string name="tv_ticketno">Ticket No.</string>
    <string name="tv_generated_ticketno">UA#A2UZ</string>
    <string name="tv_digitalclock">11:10 AM</string>
</resources>
