<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/image_margin"
        android:layout_marginTop="@dimen/layout_margin_20"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/red_selector"
                android:id="@+id/step_one_img"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/one"
                android:id="@+id/step_one_tv"
                android:textColor="@color/Red"
                android:textSize="@dimen/image_text_size"
                android:textStyle="bold" />

        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_10"
            android:src="@drawable/arrow_orange"
            android:id="@+id/step_one_arrow"
            android:contentDescription="@string/app_name"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:contentDescription="@string/app_name">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/step_two_img"
                android:src="@drawable/black_selector"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/two"
                android:id="@+id/step_two_tv"
                android:textColor="@color/Black"
                android:textSize="@dimen/image_text_size"
                android:textStyle="bold" />

        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_10"
            android:src="@drawable/arrow_orange"
            android:id="@+id/step_two_arrow"
            android:contentDescription="@string/app_name"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/step_three_img"
                android:src="@drawable/black_selector"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/three"
                android:id="@+id/step_three_tv"
                android:textColor="@color/Black"
                android:textSize="@dimen/image_text_size"
                android:textStyle="bold" />

        </FrameLayout>


    </LinearLayout>



</LinearLayout>