<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/half_square_border">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/very_small_margin"
        android:orientation="vertical"
        android:background="@color/White"
        android:weightSum="2">

        <TextView
            android:id="@+id/txt_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="@dimen/hint_text_size" />

        <TextView
            android:id="@+id/txt_Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/very_small_margin"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@color/Black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/layout_margin_15"
        android:layout_toLeftOf="@+id/ly_mapview"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/txt_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/very_small_margin"
            android:layout_weight="1"
            android:src="@drawable/enter" />

        <ImageView
            android:id="@+id/img_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/clock_red" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_mapview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/very_small_margin"
        android:layout_marginRight="@dimen/layout_margin_15"
        android:layout_marginTop="@dimen/very_small_margin"
        android:layout_toLeftOf="@+id/distance_ll"
        android:background="@drawable/map_view_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/locater" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_10"
            android:text="@string/map_view"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/distance_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginRight="@dimen/layout__margin_7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value"
            android:maxLength="3"
            android:singleLine="true"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/very_small_margin"
            android:text="@string/km"
            android:textColor="@android:color/white" />

    </LinearLayout>


</RelativeLayout>