<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_10dp">

    <TextView
        android:id="@+id/tv_ticketno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_marginTop_10"
        android:text="@string/tv_ticketno"
        android:textSize="@dimen/text_size_30" />
    <TextView
        android:id="@+id/tv_generated_ticketno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_ticketno"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_generated_ticketno"
        android:textSize="@dimen/text_size_50"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/im_black_whiteclockchek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:src="@drawable/black_whiteclock_check" />
    <TextView
        android:id="@+id/tv_digitalclock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/im_black_whiteclockchek"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/very_small_margin"
        android:text="@string/tv_digitalclock"
        android:textSize="@dimen/text_size_30" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tv_digitalclock"
        android:orientation="horizontal"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin_10"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/im_waitTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/serve_timer" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin_10"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/im_locate_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/locate_chart" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/im_serve_timer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/serve_timer" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>